--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,6 +29,8 @@
       </h2>
       <div class="user__card">
         <%= render partial: 'prototypes/prototype', collection: @user.prototypes %>
+        <%= "#{@user.name}さんの情報"%>
+        <%= "#{@user.name}さんのプロトタイプ"%>
       </div>
     </div>
   </div>
