--- a/app/views/prototypes/show.html.erb
+++ b/app/views/prototypes/show.html.erb
@@ -9,6 +9,8 @@
         <div class="prototype__manage">
           <%= link_to "編集する", edit_prototype_path(@prototype), class: :prototype__btn %>
           <%= link_to "削除する", prototype_path(@prototype), data: { turbo_method: :delete }, class: :prototype__btn %>
+          <%= link_to @prototype.user.name, "/users/#{@prototype.user.id}", class: :prototype__user %>
+          <% if user_signed_in? && current_user.id == @prototype.user.id %>
         </div>
       <% end %>
       <div class="prototype__image">
@@ -42,10 +44,10 @@
         <% end %>
         <ul class="comments_lists">
           <% @comments.each do |comment| %>
-            <li class="comments_list">
-              <%= comment.content%>
-              <%= link_to "（#{comment.user.name}）", user_path(comment.user), class: :comment_user %>
-            </li>
+            <p>
+              <%= comment.content %>
+              <%= link_to "(#{comment.user.name})", "/users/#{comment.user.id}", class: :comment_user %>
+            </p>
           <% end %>
         </ul>
       </div>
