--- a/app/views/prototypes/index.html.erb
+++ b/app/views/prototypes/index.html.erb
@@ -3,7 +3,7 @@
     <% if user_signed_in? %>
       <div class="greeting">
         こんにちは、
-        <%= link_to "#{current_user.name}さん", user_path(current_user), class: :greeting__link%>
+        <%= link_to "#{current_user.name}さん", "/users/#{current_user.id}", class: :greeting__link%>
       </div>
     <% end %>
     <div class="card__wrapper">
